# covenant-poc

./: .gitignore  Cargo.toml  README.md  V0_CLAWBACK_FINDING.md  V2_SEEDTHEFT_FINDINGS.md  VAULT_POC_FINDINGS.md
.github/workflows/: ci.yml
fixtures/: kastle-vault-v1.sil  kastle-vault-v2.sil
src/: derive.rs  lib.rs  main.rs  recovery.rs  template.rs
tests/: bip32_vectors.rs  determinism.rs  enumerable.rs  recovery_roundtrip.rs
tools/sil-compile-check/: Cargo.toml
tools/sil-compile-check/examples/: trivial.sil
tools/sil-compile-check/src/: lib.rs
tools/sil-compile-check/tests/: compile.rs
work/manifest/: covenant-poc.yaml
